--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,6 +6,6 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
     background-color: $light-gray;
 }
