--- a/src/app/messenger/messenger.component.scss
+++ b/src/app/messenger/messenger.component.scss
@@ -13,6 +13,9 @@
     box-shadow: 0 16px 32px rgba(0, 0, 0, .1);
     .anb-messenger__header {
         height: 48px;
+        display: flex;
+        align-items: center;
+        padding: 0 16px;
     }
     .anb-messenger__messages {
         flex: auto;
