--- a/src/app/messenger/messenger.component.scss
+++ b/src/app/messenger/messenger.component.scss
@@ -12,6 +12,7 @@
     overflow: hidden;
     box-shadow: 0 16px 32px rgba(0, 0, 0, .1);
     .anb-messenger__header {
+        flex: none;
         height: 48px;
         display: flex;
         align-items: center;
@@ -19,9 +20,13 @@
     }
     .anb-messenger__messages {
         flex: auto;
+        display: flex;
+        flex-direction: column-reverse;
+        overflow-y: auto;
         background-color: $light-accent;
     }
     .anb-messenger__controls {
+        flex: none;
         display: flex;
         .anb-messenger__input {
             flex: auto;
