--- a/src/app/messenger/messenger.component.scss
+++ b/src/app/messenger/messenger.component.scss
@@ -31,6 +31,7 @@
         .anb-messenger__input {
             flex: auto;
             border: none;
+            padding: 0 16px;
         }
     }
 }
