--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,11 +7,26 @@ html, body {
     height: 100%;
 }
 
+* {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+button, input {
+    outline-color: $light-accent;
+}
+
 button {
+    cursor: pointer;
     color: $accent;
     fill: $accent;
     border: none;
     background-color: transparent;
     height: 48px;
     padding: 12px;
+    transition: transform .1s;
+    &:hover {
+        svg {
+            transform: scale(1.1);
+        }
+    }
 }
